<resources>
    <string name="app_name">My Application</string>
    <string name="save_explore"><![CDATA[Save & Explore]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pavan_sindhi">Pavan Sindhi</string>
    <string name="filters">Filters</string>
    <string name="clear">clear</string>
    <string name="apply">Apply</string>
    <string name="refine">Refine</string>
    <string name="explore">Explore</string>
    <string name="network">Network</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="invite">+invite</string>
    <string name="hyderabad_within_2_2_km">Hyderabad, within 2.2 KM</string>
    <string name="friendship">Friendship</string>
    <string name="hi_community_i_am_open_to_new_connections">Hi community! I am open to new connections</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="_0_100">0-100</string>
    <string name="company_name">Company Name</string>
    <string name="enter_company_name_to_filter">Enter company name to filter</string>
    <string name="profession">Profession</string>
    <string name="enter_profession_to_filter">Enter profession to filter</string>
    <string name="location">Location</string>
    <string name="enter_city_to_filter">Enter city to filter</string>
    <string name="profile_completion_score">Profile Completion Score</string>
    <string name="select_your_availability">Select your availability</string>
    <string name="profession_university_company">Profession|University|Company</string>
    <string name="university_name">University Name</string>
    <string name="enter_university_name_to_filter">Enter university name to filter</string>
    <string name="hometown">Hometown</string>
    <string name="lives_in">Lives In</string>
    <string name="preference">Preference</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="hobbies">Hobbies</string>
    <string name="enter_hobbies_to_filter">Enter hobbies to filter</string>
    <string name="movies">Movies</string>
    <string name="enter_movies_to_filter">Enter movies to filter</string>
    <string name="food">Food</string>
    <string name="enter_food_to_filter">Enter food to filter</string>
    <string name="sports">Sports</string>
    <string name="enter_sports_to_filter">Enter sports to filter</string>
    <string name="others">Others</string>
    <string name="smokes">Smokes</string>
    <string name="drinks">Drinks</string>
    <string name="purpose">Purpose</string>
    <string name="coffee">Coffee</string>
    <string name="business">Business</string>
    <string name="dining">Dining</string>
    <string name="dating">Dating</string>
    <string name="matrimony">Matrimony</string>
    <string name="category">Category</string>
    <string name="add_your_status">Add Your Status</string>
    <string name="hi_community_i_am_open_to_new_connections_ud83d_ude0a">Hi community! I am open to new connections 😊</string>
    <string name="_0_250">0/250</string>
    <string name="select_hyper_local_distance">Select Hyper local Distance</string>
    <string name="_1_km">1 Km</string>
    <string name="_100_km">100 Km</string>
    <string name="select_purpose">Select Purpose</string>

    <string-array name="my_spinner_items">
        <item>Available | Hey Let Us Connect</item>
        <item>Away | Stay Discreet And Watch</item>
        <item>Busy | Do Not Disturb | Will Catch Up Later</item>
        <item>SOS | Emergency! Need Assistance! HELP</item>
    </string-array>

    <string-array name="my_briefcase_spinner_items">
        <item>Business Services</item>
        <item>Utility Services</item>
        <item>Government Services</item>
        <item>Medical Services</item>
        <item>Religious Services</item>
        <item>Academics</item>
        <item>Educational Services</item>
        <item>Defence Services</item>
        <item>Banking Services</item>
        <item>Social Volunteer</item>
        <item>Other</item>
    </string-array>

    <string-array name="my_market_spinner_items">
        <item>Restaurants &amp; Coffee shops</item>
        <item>Shoes &amp; Accessories</item>
        <item>Jewellers</item>
        <item>Saloons</item>
        <item>Gymnasium</item>
        <item>Chemists &amp; Druggists</item>
        <item>Automobile Dealers</item>
        <item>Movie Theaters</item>
        <item>Home Appliances</item>
    </string-array>


</resources>